web/book/tests/documentation/snapshots/documentation__book__reference__declarations__functions__partial-application__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "let top_n = n -> take n\n\nfrom invoices\ntop_n 10\n"
---
SELECT
  *
FROM
  invoices
LIMIT
  10
