web/book/tests/documentation/snapshots/documentation__book__reference__declarations__functions__partial-application__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "let top_n = n -> take n\nlet top_5 = top_n 5\n\nfrom invoices\ntop_5\n"
---
SELECT
  *
FROM
  invoices
LIMIT
  5
